Переписывает некоторые классы swiper

--- a/source/index.html
+++ b/source/index.html
@@ -47,12 +47,12 @@
         <div class="swiper-button-next"></div>
         <div class="swiper-scrollbar"></div>
       </div> -->
-      <section class="slider swiper">
+      <section class="swiper">
         <h2 class="visually-hidden">Слайдер.Новинки</h2>
-        <button class="slider__button slider__arrow-left swiper-button-prev" type="button" aria-label="Листать в право"></button>
-        <div class="container slider__container swiper-wrapper">
-          <div class="slider-card slider__element swiper-slide">
-            <h3 class="slider-card__title">Декаф Флэт Уайт</h3>
+        <button class="swiper__arrow-left swiper-button-prev" type="button" aria-label="Листать в право"></button>
+        <div class="container swiper-wrapper">
+          <div class="swiper-slide">
+            <h3 class="swiper-slide__title">Декаф Флэт Уайт</h3>
             <picture>
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/flat-white-img-desktop@1x.webp 1x, images/swiper-images/flat-white-img-desktop@2x.webp 2x">
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/flat-white-img-desktop@1x.png 1x, images/swiper-images/flat-white-img-desktop@2x.png 2x">
@@ -60,35 +60,35 @@
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/flat-white-img-tablet@1x.png 1x, images/swiper-images/flat-white-img-tablet@2x.png 2x">
               <img class="slider__card-image" width="280" height="280" src="images/swiper-images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/swiper-images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
             </picture>
-            <p class="slider-card__new">новинка!</p>
-            <p class="slider-card__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+            <p class="swiper-slide__new">новинка!</p>
+            <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
           </div>
-          <div class="slider-card slider__element swiper-slide">
-            <h3 class="slider-card__title">Декаф Флэт Уайт</h3>
+          <div class="swiper-slide">
+            <h3 class="swiper-slide__title">Декаф Флэт Уайт</h3>
             <picture>
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/lavender-img-desktop@1x.webp 1x, images/swiper-images/lavender-img-desktop@2x.webp 2x">
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/lavender-img-desktop@1x.png 1x, images/swiper-images/lavender-img-desktop@2x.png 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/lavender-img-tablet@1x.webp 1x, images/swiper-images/lavender-img-tablet@2x.webp 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/lavender-img-tablet@1x.png 1x, images/swiper-images/lavender-img-tablet@2x.png 2x">
-              <img class="slider__card-image" width="280" height="280" src="images/swiper-images/lavender-img-mobile@1x.png" srcset="images/lavender-img-mobile@1x.webp, images/swiper-images/lavender-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
+              <img class="swiper-slide-image" width="280" height="280" src="images/swiper-images/lavender-img-mobile@1x.png" srcset="images/lavender-img-mobile@1x.webp, images/swiper-images/lavender-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
             </picture>
-            <p class="slider-card__new">новинка!</p>
-            <p class="slider-card__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+            <p class="swiper-slide__new">новинка!</p>
+            <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
           </div>
-          <div class="slider-card slider__element swiper-slide">
-            <h3 class="slider-card__title">Декаф Флэт Уайт</h3>
+          <div class="swiper-slide">
+            <h3 class="swiper-slide__title">Декаф Флэт Уайт</h3>
             <picture>
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/espresso-img-desktop@1x.webp 1x, images/swiper-images/espresso-img-desktop@2x.webp 2x">
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/espresso-img-desktop@1x.png 1x, images/swiper-images/espresso-img-desktop@2x.png 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/espresso-img-tablet@1x.webp 1x, images/swiper-images/espresso-img-tablet@2x.webp 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/espresso-img-tablet@1x.png 1x, images/swiper-images/espresso-img-tablet@2x.png 2x">
-              <img class="slider__card-image" width="280" height="280" src="images/swiper-images/espresso-img-mobile@1x.png" srcset="images/espresso-img-mobile@1x.webp, images/swiper-images/espresso-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
+              <img class="swiper-slide-image" width="280" height="280" src="images/swiper-images/espresso-img-mobile@1x.png" srcset="images/espresso-img-mobile@1x.webp, images/swiper-images/espresso-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
             </picture>
-            <p class="slider-card__new">новинка!</p>
-            <p class="slider-card__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+            <p class="swiper-slide__new">новинка!</p>
+            <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
           </div>
         </div>
-        <button class="slider__button slider__arrow-right swiper-button-next" type="button" aria-label="Листать в лево"></button>
+        <button class="swiper__arrow-right swiper-button-next" type="button" aria-label="Листать в лево"></button>
         <div class="slider-price">
             <ul class="slider-price__list">
               <li class="slider-price__old">295&#8381;</li>
