--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
           <span class="visually-hidden">На главную страницу</span>
           <picture>
             <source type="image/svg+xml" width="170" height="36" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
-            <source type="image/svg+xml" width="82" height="36" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
+            <source type="image/svg+xml" width="82" height="36" media="(min-width: 768px)" srcset="images/logo-medium.svg">
             <img class="logo__image" width="32" height="36" src="images/logo-mobile.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
           </picture>
         </a>
@@ -32,7 +32,7 @@
           </button>
           <ul class="main-nav__list">
             <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
-            <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог</a></li>
+            <li class="main-nav__item"><a class="main-nav__link" href="#">Каталог</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="#">Доставка</a></li>
             <li class="main-nav__item"><a class="main-nav__link" href="#">О нас</a></li>
           </ul>
@@ -58,7 +58,7 @@
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/flat-white-img-desktop@1x.png 1x, images/swiper-images/flat-white-img-desktop@2x.png 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/flat-white-img-tablet@1x.webp 1x, images/swiper-images/flat-white-img-tablet@2x.webp 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/flat-white-img-tablet@1x.png 1x, images/swiper-images/flat-white-img-tablet@2x.png 2x">
-              <img class="slider__card-image" width="280" height="280" src="images/swiper-images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/swiper-images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
+              <img class="swiper-slide__image" width="280" height="280" src="images/swiper-images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/swiper-images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
             </picture>
             <p class="swiper-slide__new">новинка!</p>
             <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
@@ -70,7 +70,7 @@
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/lavender-img-desktop@1x.png 1x, images/swiper-images/lavender-img-desktop@2x.png 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/lavender-img-tablet@1x.webp 1x, images/swiper-images/lavender-img-tablet@2x.webp 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/lavender-img-tablet@1x.png 1x, images/swiper-images/lavender-img-tablet@2x.png 2x">
-              <img class="swiper-slide-image" width="280" height="280" src="images/swiper-images/lavender-img-mobile@1x.png" srcset="images/lavender-img-mobile@1x.webp, images/swiper-images/lavender-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
+              <img class="swiper-slide__image" width="280" height="280" src="images/swiper-images/lavender-img-mobile@1x.png" srcset="images/lavender-img-mobile@1x.webp, images/swiper-images/lavender-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
             </picture>
             <p class="swiper-slide__new">новинка!</p>
             <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
@@ -82,7 +82,7 @@
               <source type="image/svg+xml" width="600" height="600" media="(min-width: 1440px)" srcset="images/swiper-images/espresso-img-desktop@1x.png 1x, images/swiper-images/espresso-img-desktop@2x.png 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/espresso-img-tablet@1x.webp 1x, images/swiper-images/espresso-img-tablet@2x.webp 2x">
               <source type="image/svg+xml" width="476" height="476" media="(min-width: 768px)" srcset="images/swiper-images/espresso-img-tablet@1x.png 1x, images/swiper-images/espresso-img-tablet@2x.png 2x">
-              <img class="swiper-slide-image" width="280" height="280" src="images/swiper-images/espresso-img-mobile@1x.png" srcset="images/espresso-img-mobile@1x.webp, images/swiper-images/espresso-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
+              <img class="swiper-slide__image" width="280" height="280" src="images/swiper-images/espresso-img-mobile@1x.png" srcset="images/espresso-img-mobile@1x.webp, images/swiper-images/espresso-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
             </picture>
             <p class="swiper-slide__new">новинка!</p>
             <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
@@ -320,8 +320,8 @@
               <span class="visually-hidden">На главную страницу</span>
               <picture>
                 <source type="image/svg+xml" width="170" height="36" media="(min-width: 1440px)" srcset="images/images/logo-drink2go-medium.svg">
-                <source type="image/svg+xml" width="82" height="36" media="(min-width: 768px)" srcset="images/images/logo-drink2go-medium.svg">
-                <img class="logo__image" width="82" height="36" src="images/logo-drink2go-medium.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
+                <source type="image/svg+xml" width="82" height="36" media="(min-width: 768px)" srcset="images/images/logo-medium.svg">
+                <img class="logo__image" width="82" height="36" src="images/logo-medium.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
               </picture>
             </a>
             <a class="social__vk" href="#">
