Работа со слайдером

--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
       </div> -->
       <section class="swiper">
         <h2 class="visually-hidden">Слайдер.Новинки</h2>
-        <button class="swiper__arrow-left swiper-button-prev" type="button" aria-label="Листать в право"></button>
+        <button class="swiper__arrow-prev swiper-button-prev" type="button" aria-label="Листать в право"></button>
         <div class="container swiper-wrapper">
           <div class="swiper-slide">
             <h3 class="swiper-slide__title">Декаф Флэт Уайт</h3>
@@ -88,7 +88,7 @@
             <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
           </div>
         </div>
-        <button class="swiper__arrow-right swiper-button-next" type="button" aria-label="Листать в лево"></button>
+        <button class="swiper__arrow-next swiper-button-next" type="button" aria-label="Листать в лево"></button>
         <div class="slider-price">
             <ul class="slider-price__list">
               <li class="slider-price__old">295&#8381;</li>
