Силизация кнопок свайпера, частичная стилизация планшетной версии

--- a/source/index.html
+++ b/source/index.html
@@ -41,16 +41,10 @@
     </header>
     <main>
       <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
-      <!-- </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-scrollbar"></div>
-      </div> -->
       <section class="swiper">
         <h2 class="visually-hidden">Слайдер.Новинки</h2>
-        <button class="swiper__arrow-prev swiper-button-prev" type="button" aria-label="Листать в право"></button>
-        <div class="container swiper-wrapper">
+        <button class="swiper-button-prev swiper__arrow-prev" type="button" aria-label="Листать в право"></button>
+        <div class="container swiper__container swiper-wrapper">
           <div class="swiper-slide">
             <h3 class="swiper-slide__title">Декаф Флэт Уайт</h3>
             <picture>
