--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,7 @@
     <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="styles/styles.css">
+    <!-- The Staple Singers - IвLl Take You There -->
   </head>
   <body class="page__body">
     <header class="header">
@@ -55,7 +56,7 @@
               <img class="swiper-slide__image" width="280" height="280" src="images/swiper-images/flat-white-img-mobile@1x.png" srcset="images/flat-white-img-mobile@1x.webp, images/swiper-images/flat-white-img-mobile@2x.webp 2x" alt="Decaf Flat White — кофейный напиток, в котором эспрессо без кофеина сочетается с тёплым молоком, взбитым до лёгкой бархатистой пены">
             </picture>
             <p class="swiper-slide__new">новинка!</p>
-            <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+            <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии<br> с натуральным фермерским молоком — то, что нужно<br> для расслабления после тяжёлого рабочего дня</p>
             <div class="slider-price">
               <ul class="slider-price__list">
                 <li class="slider-price__old">295&#8381;</li>
