--- a/source/index.html
+++ b/source/index.html
@@ -214,7 +214,7 @@
             <li class="catalog__list-item">
               <article class="poduct-card">
                 <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
-                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии<br> с натуральным фермерским молоком</p>
                 <span class="poduct-card__price">225₽</span>
                 <button class="poduct-card__add-to-basket" type="button">В корзину</button>
                 <picture>
@@ -229,7 +229,7 @@
             <li class="catalog__list-item">
               <article class="poduct-card">
                 <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
-                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии<br> с натуральным фермерским молоком</p>
                 <span class="poduct-card__price">225₽</span>
                 <button class="poduct-card__add-to-basket" type="button">В корзину</button>
                 <picture>
@@ -244,7 +244,7 @@
             <li class="catalog__list-item">
               <article class="poduct-card">
                 <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
-                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии<br> с натуральным фермерским молоком</p>
                 <span class="poduct-card__price">225₽</span>
                 <button class="poduct-card__add-to-basket" type="button">В корзину</button>
                 <picture>
@@ -259,7 +259,7 @@
             <li class="catalog__list-item">
               <article class="poduct-card">
                 <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
-                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии<br> с натуральным фермерским молоком</p>
                 <span class="poduct-card__price">225₽</span>
                 <button class="poduct-card__add-to-basket" type="button">В корзину</button>
                 <picture>
@@ -274,7 +274,7 @@
             <li class="catalog__list-item">
               <article class="poduct-card">
                 <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
-                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии<br> с натуральным фермерским молоком</p>
                 <span class="poduct-card__price">225₽</span>
                 <button class="poduct-card__add-to-basket" type="button">В корзину</button>
                 <picture>
@@ -289,7 +289,7 @@
             <li class="catalog__list-item">
               <article class="poduct-card">
                 <h3 class="poduct-card__title">Декаф Флэт Уайт</h3>
-                <p class="poduct-card__about">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
+                <p class="poduct-card__about">Кофе без кофеина из Эфиопии<br> с натуральным фермерским молоком</p>
                 <span class="poduct-card__price">225₽</span>
                 <button class="poduct-card__add-to-basket" type="button">В корзину</button>
                 <picture>
