--- a/source/index.html
+++ b/source/index.html
@@ -303,11 +303,11 @@
             </li>
           </ul>
           <ul class="pagination">
-            <li class="pagination__item"><a class="pagination__link" href="#" aria-label="Назад"></a></li>
+            <li class="pagination__item"><a class="pagination__link" href="#" aria-label="Назад"><span>Назад</span></a></li>
             <li class="pagination__item"><a class="pagination__link" href="#">1</a></li>
             <li class="pagination__item"><a class="pagination__link pagination__link--current" href="#">2</a></li>
             <li class="pagination__item"><a class="pagination__link" href="#">3</a></li>
-            <li class="pagination__item"><a class="pagination__link" href="#" aria-label="Вперёд"></a></li>
+            <li class="pagination__item"><a class="pagination__link" href="#" aria-label="Вперёд"><span>Вперёд</span></a></li>
           </ul>
         </div>
       </section>
