Попытка стилизовать футер под 768 без доп. классов.

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
         <a class="logo header__logo" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <picture>
-            <source type="image/svg+xml" width="170" height="36" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
+            <source type="image/svg+xml" width="170" height="36" media="(min-width: 1440px)" srcset="images/logo-big.svg">
             <source type="image/svg+xml" width="82" height="36" media="(min-width: 768px)" srcset="images/logo-medium.svg">
             <img class="logo__image" width="32" height="36" src="images/logo-mobile.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
           </picture>
@@ -322,26 +322,27 @@
           <img class="footer__map-image" width="320" height="420" src="images/map-images/map-mobile@1x.jpg" srcset="images/map-images/map-mobile@1x.webp 1x, images/map-images/map-mobile@2x.webp 2x" alt="Адрес на карте. Город Санкт-Петербург, набережная реки Карповки, дом 5">
         </picture>
       </div>
-      <nav class="footer__nav footer-nav">
-        <div class="container">
-          <div class="social footer__social">
+        <div class="container footer__container">
+          <nav class="footer__nav footer-nav">
+            <div class="social footer__social">
             <a class="logo social__logo" href="index.html" aria-current="page">
               <span class="visually-hidden">На главную страницу</span>
               <picture>
-                <source type="image/svg+xml" width="170" height="36" media="(min-width: 1440px)" srcset="images/images/logo-drink2go-medium.svg">
-                <source type="image/svg+xml" width="82" height="36" media="(min-width: 768px)" srcset="images/images/logo-medium.svg">
-                <img class="logo__image" width="82" height="36" src="images/logo-medium.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
+                <source type="image/svg+xml" width="170" height="36" media="(min-width: 768px)" srcset="images/logo-big.svg">
+                <img class="logo__image" width="32" height="36" src="images/logo-mobile.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
               </picture>
             </a>
-            <a class="social__vk" href="#">
-              <span class="visually-hidden">Войти в личный кабинет</span>
-            </a>
-            <a class="social__pinterest" href="#">
-              <span class="visually-hidden">Корзина</span>
-            </a>
-            <a class="social__ok" href="#">
-              <span class="visually-hidden">Корзина</span>
-            </a>
+            <div class="social__link">
+              <a class="social__vk" href="#">
+                <span class="visually-hidden">Войти в личный кабинет</span>
+              </a>
+              <a class="social__pinterest" href="#">
+                <span class="visually-hidden">Корзина</span>
+              </a>
+              <a class="social__ok" href="#">
+                <span class="visually-hidden">Корзина</span>
+              </a>
+            </div>
           </div>
           <h3 class="footer-nav__title">Интернет-магазин</h3>
           <ul class="footer-nav__list">
@@ -356,8 +357,8 @@
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">Информация для сми</a></li>
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">Правовая информация</a></li>
           </ul>
+          <h2 class="footer-nav__title">Контакты</h2>
           <div class="footer__contacts">
-            <h2 class="footer-nav__title">Контакты</h2>
             <address class="footer__contacts-address">Санкт-Петербург, набережная реки Карповки, дом 5</address>
             <a class="footer__contacts-phone" href="tel:+79999999999">+7 (999) 999-99-99</a>
           </div>
