--- a/source/index.html
+++ b/source/index.html
@@ -322,19 +322,19 @@
           <img class="footer__map-image" width="320" height="420" src="images/map-images/map-mobile@1x.jpg" srcset="images/map-images/map-mobile@1x.webp 1x, images/map-images/map-mobile@2x.webp 2x" alt="Адрес на карте. Город Санкт-Петербург, набережная реки Карповки, дом 5">
         </picture>
       </div>
-        <div class="container footer__container">
-          <nav class="footer__nav footer-nav">
-            <div class="social footer__social">
+      <div class="container footer__container">
+        <nav class="footer__nav footer-nav">
+          <div class="social footer__social">
             <a class="logo social__logo" href="index.html" aria-current="page">
               <span class="visually-hidden">На главную страницу</span>
               <picture>
-                <source type="image/svg+xml" width="170" height="36" media="(min-width: 768px)" srcset="images/logo-big.svg">
-                <img class="logo__image" width="32" height="36" src="images/logo-mobile.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
+              <source type="image/svg+xml" width="170" height="36" media="(min-width: 768px)" srcset="images/logo-big.svg">
+              <img class="logo__image" width="83" height="36" src="images/logo-medium.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
               </picture>
             </a>
             <div class="social__link">
               <a class="social__vk" href="#">
-                <span class="visually-hidden">Войти в личный кабинет</span>
+              <span class="visually-hidden">Войти в личный кабинет</span>
               </a>
               <a class="social__pinterest" href="#">
                 <span class="visually-hidden">Корзина</span>
@@ -357,14 +357,14 @@
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">Информация для сми</a></li>
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">Правовая информация</a></li>
           </ul>
-          <h2 class="footer-nav__title">Контакты</h2>
+          <h3 class="footer-nav__title">Контакты</h3>
           <div class="footer__contacts">
             <address class="footer__contacts-address">Санкт-Петербург, набережная реки Карповки, дом 5</address>
             <a class="footer__contacts-phone" href="tel:+79999999999">+7 (999) 999-99-99</a>
           </div>
           <p class="footer__developer">Разработано в HTML Academy</p>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </footer>
      <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="./vendor/nouislider/nouislider.min.js" type="module"></script>
