--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <nav class="header__nav main-nav main-nav--is-close main-nav--nojs">
+      <nav class="main-nav main-nav--is-close main-nav--nojs">
         <a class="logo header__logo" href="index.html" aria-current="page">
           <span class="visually-hidden">На главную страницу</span>
           <picture>
@@ -20,13 +20,14 @@
             <source type="image/svg+xml" width="82" height="36" media="(min-width: 768px)" srcset="images/logo-medium.svg">
             <img class="logo__image" width="32" height="36" src="images/logo-mobile.svg" alt="Логотип магазина. Двойка в фиолетовом круге">
           </picture>
+          <span>Интернет-магазин<br> кофейных напитков</span>
         </a>
         <div class="main-nav__group">
           <a class="main-nav__account" href="#">
-            <span class="visually-hidden">Войти в личный кабинет</span>
+            <span class="main-nav__account-enter">Войти</span>
           </a>
           <a class="main-nav__basket" href="#">
-            <span class="visually-hidden">Корзина</span>
+            <span class="main-nav__basket-enter">Корзина</span>
           </a>
           <button class="main-nav__btn btn-burger" type="button">
             <span class="visually-hidden">Открыть/закрыть меню</span>
