--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="preload" href="fonts/Montserrat-Regular.woff" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <!-- The Staple Singers - IвLl Take You There -->
   </head>
   <body class="page__body">
     <header class="header">
@@ -58,12 +57,12 @@
             </picture>
             <p class="swiper-slide__new">новинка!</p>
             <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии<br> с натуральным фермерским молоком — то, что нужно<br> для расслабления после тяжёлого рабочего дня</p>
-            <div class="slider-price">
-              <ul class="slider-price__list">
-                <li class="slider-price__old">295&#8381;</li>
-                <li class="slider-price__new">225&#8381;</li>
+            <div class="swiper-price">
+              <ul class="swiper-price__list">
+                <li class="swiper-price__old">295&#8381;</li>
+                <li class="swiper-price__new">225&#8381;</li>
               </ul>
-              <button class="button slider-price__button" type="button">Заказать</button>
+              <button class="button swiper-price__button" type="button">Заказать</button>
             </div>
           </div>
           <div class="swiper-slide">
@@ -77,12 +76,12 @@
             </picture>
             <p class="swiper-slide__new">новинка!</p>
             <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
-            <div class="slider-price">
-              <ul class="slider-price__list">
-                <li class="slider-price__old">295&#8381;</li>
-                <li class="slider-price__new">225&#8381;</li>
+            <div class="swiper-price">
+              <ul class="swiper-price__list">
+                <li class="swiper-price__old">295&#8381;</li>
+                <li class="swiper-price__new">225&#8381;</li>
               </ul>
-              <button class="button slider-price__button" type="button">Заказать</button>
+              <button class="button swiper-price__button" type="button">Заказать</button>
             </div>
           </div>
           <div class="swiper-slide">
@@ -96,12 +95,12 @@
             </picture>
             <p class="swiper-slide__new">новинка!</p>
             <p class="swiper-slide__description">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
-            <div class="slider-price">
-              <ul class="slider-price__list">
-                <li class="slider-price__old">295&#8381;</li>
-                <li class="slider-price__new">225&#8381;</li>
+            <div class="swiper-price">
+              <ul class="swiper-price__list">
+                <li class="swiper-price__old">295&#8381;</li>
+                <li class="swiper-price__new">225&#8381;</li>
               </ul>
-              <button class="button slider-price__button" type="button">Заказать</button>
+              <button class="button swiper-price__button" type="button">Заказать</button>
             </div>
           </div>
         </div>
@@ -367,8 +366,8 @@
         </nav>
       </div>
     </footer>
-     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="./vendor/nouislider/nouislider.min.js" type="module"></script>
     <script src="./scripts/index.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
   </body>
 </html>
